v3/docs/waterfall-hwpx-demo/03-상세설계/상세설계서.md
# 상세 설계서 (Detailed Design Document)

| 항목 | 내용 |
|------|------|
| **프로젝트명** | HWP/HWPX AI 문서 생성 데모 서비스 (v3) |
| **문서 버전** | v1.3 |
| **작성일** | 2026-04-22 |
| **최종 수정일** | 2026-04-22 |
| **작성자** | 개발팀 |
| **문서 상태** | 승인됨 |

---

## 1. 개요

### 1.1 목적

본 문서는 v3 서비스의 각 모듈에 대한 상세 설계를 다룬다. 클래스/함수 단위의 인터페이스, 알고리즘, 데이터 구조를 정의한다.

### 1.2 모듈 목록

| 모듈 | 위치 | 역할 |
|------|------|------|
| Uploader | `client/src/components/Uploader.jsx` | 드래그 앤 드롭, 클릭 업로드, 파일 해제, 접근성 |
| useRhwp | `client/src/hooks/useRhwp.js` | WASM 파서 제어, SVG 렌더링, 다중 페이지 추출 |
| useDraft | `client/src/hooks/useDraft.js` | AI 초안 생성 및 HWPX 납품 흐름 관리 |
| useAuth | `client/src/hooks/useAuth.js` | 로그인/로그아웃/세션 팝업 관리, 자동 새로고침 |
| LoginOverlay | `client/src/components/LoginOverlay.jsx` | 전체 화면 로그인 오버레이 (버전 A) |
| draft (server) | `server/services/draft.js` | 프롬프트 엔지니어링, AI 호출, 응답 검증 |
| hwpxBuilder | `server/services/hwpxBuilder.js` | Python 스크립트 실행, 임시 파일 관리 |
| googleAuth | `server/routes/googleAuth.js` | Google OAuth 2.0 흐름 + Mock 로그인 폭백 |
| session | `server/lib/session.js` | 메모리 기반 세션 저장소 (24h TTL) |
| build_hwpx.py | `scripts/build_hwpx.py` | HWPX 언패킹, XML 치환, 다이어그램 임베딩, 재패키징 |
| validate | `shared/validate.js` | 클라이언트/서버 공용 AI 응답 검증 |
| helpers | `client/src/lib/helpers.js` | DOC_TYPES, Optimistic Draft, stage items, formatSize |

---

## 2. 클라이언트 상세 설계

### 2.1 Uploader 컴포넌트

**인터페이스**:
```javascript
function Uploader({ onFileSelect, currentFile, currentInsight }) {
  // currentInsight: { pageCount, mode: 'hwpx-template' | 'hwp-source' }
}
```

**낸부 상태**:
- `isDragging`: boolean — 드래그 중 시각적 피드백
- `rejectMessage`: string — 파일 거부 오류 메시지

**알고리즘**:
1. `handleDrop(event)`:
   - `event.preventDefault()` + `event.stopPropagation()`
   - `event.dataTransfer.files[0]` 획득
   - `isAcceptedFile()`: `.hwp` 또는 `.hwpx` 확장자 검증
   - 실패 시 `setRejectMessage()` + `role="alert"` 표시
   - 성공 시 `onFileSelect(file)` 호출
2. `handleDragOver(event)`:
   - `event.dataTransfer.dropEffect = 'copy'`
   - `setIsDragging(true)` → CSS `is-dragging` 클래스 적용
3. `handleDragLeave(event)`:
   - `event.currentTarget.contains(event.relatedTarget)` 검사로 자식 요소 이벤트 필터
   - `setIsDragging(false)`
4. `handleReset(event)`:
   - `event.stopPropagation()`으로 상위 클릭 이벤트 방지
   - `onFileSelect(null)`로 파일 해제

**접근성**:
- `role="button"`, `tabIndex={0}`, `aria-label`
- `onKeyDown`: Enter/Space 키로 파일 선택기 열기
- 해제 버튼: `aria-label="파일 해제"`
- 거부 메시지: `role="alert"`

### 2.2 useRhwp Hook

**인터페이스**:
```javascript
function useRhwp() {
  return {
    sourceInsight,      // { fileName, pageCount, previewSvg, extractedText, mode }
    parseStatus,        // string
    setParseStatus,     // (status: string) => void
    parseFile,          // (file: File) => Promise<Insight | null>
    builtPreview,       // { svgs: string[], pageCount: number, fileName: string, url: string }
    renderBuiltHwpx,    // (url: string, fileName: string) => Promise<BuiltPreview | null>
    clearBuiltPreview,  // () => void
  };
}
```

**알고리즘 - parseFile (개선)**:
1. `parseJobRef.current += 1`로 job ID 생성 (경쟁 조건 방지)
2. `ensureRhwp()`: `@rhwp/core` WASM 초기화 (캐시된 Promise 재사용)
3. `file.arrayBuffer()` → `new Uint8Array(buffer)` → `new HwpDocument(bytes)`
4. `document.pageCount()` → `document.renderPageSvg(0)`
5. `extractTextFromSvg(previewSvg)`로 첫 페이지 텍스트 추출
6. `isHwpx = file.name.toLowerCase().endsWith('.hwpx')`
7. `sourceInsight` 상태 업데이트 (fileName, pageCount, previewSvg, extractedText, mode)
8. **백그라운드**: `enrichAdditionalPages({ document, totalPages, initialText: firstPageText, jobId })`

**알고리즘 - enrichAdditionalPages (신규)**:
```javascript
async function enrichAdditionalPages({ document, totalPages, initialText, jobId }) {
  if (totalPages <= 1) return;
  const extractedPages = [initialText];
  for (let i = 1; i < Math.min(totalPages, 3); i += 1) {
    extractedPages.push(extractTextFromSvg(document.renderPageSvg(i)));
  }
  // 경쟁 조건 방지: 현재 jobId가 유효할 때만 상태 업데이트
  if (parseJobRef.current !== jobId) return;
  setSourceInsight((current) => ({
    ...current,
    extractedText: extractedPages.join('\n').trim()
  }));
}
```

**알고리즘 - renderBuiltHwpx (개선)**:
- 최대 5페이지까지 SVG 렌더링 (`maxPages = Math.min(pageCount, 5)`)
- `BUILT_INITIAL = { svgs: [], pageCount: 0, fileName: '', url: '' }`로 초기화

### 2.3 useDraft Hook

**인터페이스**:
```javascript
function useDraft({ setParseStatus }) {
  return {
    draft,              // AI 초안 객체 | null
    setDraft,
    draftLoading,       // boolean
    exportState,        // { loading: boolean, url: string, fileName: string, message: string }
    generateDraft,      // (params) => Promise<Draft | null>
    buildHwpx,          // (params) => Promise<{url, fileName} | null>
    downloadBuilt,      // () => void
  };
}
```

**개선사항**:
- `exportState`에 `loading` 플래그 추가 → ControlPanel 버튼 상태 연동
- `resetExport()`: exportState를 초기 상태로 리셋
- `generateDraft` 내에서 `!sourceFile` 검증 추가 → "먼저 HWP 또는 HWPX 문서를 업로드해 주세요."
- `buildHwpx`에서 `sourceMode`와 `sourceText`를 FormData에 추가

**알고리즘 - generateDraft (개선)**:
1. `!sourceFile` 검증 → early return
2. `setDraftLoading(true)` + `resetExport()`
3. `buildOptimisticDraft({ sourceInsight, docType, companyName, goal, notes, targetTitle })` → 임시 초안 생성
4. `setDraft(optimistic)` + `setParseStatus(...)` + `onOptimistic?.()`
5. `fetch('/api/generate-draft', { method: 'POST', headers: { 'Content-Type': 'application/json' }, body })`
6. 응답에서 `payload.draft` 추출 (구조 변경: `payload.ok` + `payload.draft`)
7. 에러 시 `setDraft(null)` + `setParseStatus(\`AI 초안 생성 실패: ${error.message}\`)`

### 2.5 useAuth Hook

**인터페이스**:
```javascript
function useAuth() {
  return {
    user,              // { email, name, picture } | null
    loading,           // boolean (초기 세션 확인 중)
    loginWithPopup,    // () => void — /auth/google 팝업 열기
    logout,            // () => void — POST /api/logout 후 상태 초기화
  };
}
```

**알고리즘**:
1. **마운트 시**: `GET /api/me` (credentials: 'include') → `user` 상태 설정
2. **loginWithPopup()**:
   - `window.open('/auth/google', 'google-oauth', 'width=500,height=600')`
   - `window.addEventListener('message')`로 `google-auth-result` 수신
   - 성공 시 `refresh()` 호출 → `user` 상태 업데이트
3. **logout()**:
   - `POST /api/logout` (credentials: 'include')
   - `setUser(null)`

### 2.4 helpers.js 주요 함수

| 함수 | 설명 |
|------|------|
| `DOC_TYPES` | `{ value, label }[]` 배열. 문서 유형 상수 집중화 |
| `buildOptimisticDraft({ sourceInsight, docType, companyName, goal, notes, targetTitle })` | 추출 텍스트 기반 임시 초안 생성 |
| `getDraftStageItems()` | 초안 단계 라인 표시용 문자열 배열 |
| `getDraftItemStatus(draft)` | 초안 상태 문자열 반환 |
| `getDraftSectionLabel(draft)` | 섹션 레이블 문자열 반환 |
| `formatSize(bytes)` | 바이트 → B/KB/MB 변환 |
| `extractTextFromSvg(svgString)` | SVG에서 텍스트 노드 추출 |
| `triggerDownload(url, fileName)` | 숨겨진 `<a>` 태그로 다운로드 트리거 |

---

### 3.4 session.js (세션 관리)

**함수**:
```javascript
function createSession(user)        // sid 생성, Map 저장, 24h TTL
function getSession(sid)            // TTL 검증 후 user 반환 또는 null
function destroySession(sid)        // Map에서 sid 제거
```

**데이터 구조**:
```javascript
sessions = Map<string, { user: object, createdAt: number }>
```

**TTL 스위프**: 60초 간격으로 24h 초과 세션 자동 제거

---

### 3.5 googleAuth.js (Google OAuth Router)

**특징**: Express Router로 분리. `isPlaceholderCredential()`으로 client_id가 placeholder인지 감지

**엔드포인트**:
| 메서드 | 경로 | 설명 |
|--------|------|------|
| GET | `/auth/google` | Google OAuth 시작 또는 Mock HTML 반환 |
| GET | `/auth/google/callback` | code → token → userinfo → 세션 생성 |
| GET | `/api/me` | 현재 세션 사용자 반환 |
| POST | `/api/logout` | 세션 삭제 + 쿠키 제거 |

**Mock 로그인 폼**:
- `GOOGLE_CLIENT_ID` 미설정 시 HTML 폼 반환
- 이메일/이름 입력 → POST 없이 바로 세션 생성
- 개발 환경에서 OAuth 없이 인증 흐름 테스트 가능

---

## 3. 서버 상세 설계

---

## 5. 변경 이력

| 버전 | 날짜 | 작성자 | 변경 내용 |
|------|------|--------|-----------|
| v1.0 | 2026-04-20 | 개발팀 | 초안 작성 |
| v1.1 | 2026-04-21 | 개발팀 | `useAuth.js`, `LoginOverlay.jsx`, `session.js`, `googleAuth.js` 상세 설명 추가 |
| v1.2 | 2026-04-21 | 개발팀 | Mock 로그인 폭백 알고리즘, 팝업 `postMessage` 통신 상세 추가 |
| v1.3 | 2026-04-22 | 개발팀 | 버전 A/B 실행에 따른 `LoginOverlay` 조걵 렌더링 설명 추가 |

---

### 3.1 draft.js (AI 초안 서비스)

**함수**: `buildDraftWithAI(input)`

**입력**:
```typescript
interface DraftInput {
  sourceText: string;
  docType: 'report' | 'proposal' | 'minutes' | 'gonmun' | 'base';
  companyName: string;
  goal: string;
  notes: string;
  fileName: string;
  targetTitle: string;
  aiProvider: string;
  aiApiKey: string;
}
```

**출력** (구조 변경):
```typescript
interface DraftOutput {
  ok: true;
  draft: {
    title: string;
    summary: string;
    toc: string[];
    sections: { heading: string; body: string }[];
    diagrams: DiagramSpec[];
    sourceExcerpt: string[];
    engine: string;
  };
}
```

**프롬프트 전략**: 기존과 동일 (템플릿 재사용 모드 / 소스 분석 모드)

**재시도 로직**:
```javascript
for (let attempt = 0; attempt < 2; attempt++) {
  const text = await callOnce();
  const parsed = tryExtractJson(text);
  if (!parsed) continue;
  try {
    validated = validateDraftPayload(parsed);
    break;
  } catch (err) { continue; }
}
```

### 3.2 export-hwpx 엔드포인트 (개선)

**추가 필드**:
- `sourceMode`: `'hwpx-template' | 'hwp-source'` — 템플릿 재사용 여부 전달. 'hwpx-template' 모드에서 원본 파일이 없으면 422 에러 반환

### 3.3 hwpxBuilder.js (HWPX 빌드 오케스트레이션)

**변경사항**:
- `sourceDocumentName`에 원본 파일명(NFC 정규화)만 포함
- `--source-document` 인자에 원본 파일명 전달
- `sourceMode`는 서버에서 템플릿 재사용 여부 판단에 사용되며 Python 빌드 엔진으로는 전달되지 않음

---

## 4. Python 빌드 엔진 상세 설계

### 4.1 전체 흐름 (`main()`)

변경 없음 (기존과 동일):
1. parse_args()
2. template_path 결정
3. normalize_toc()
4. tempfile.TemporaryDirectory()
5. unpack_hwpx()
6. apply_smart_replacements()
7. embed_diagrams()
8. update_preview()
9. update_metadata()
10. pack_hwpx()

### 4.2 apply_smart_replacements (핵심 알고리즘)

변경 없음 (기존과 동일):
- Two-Pass Replacement (Paragraph Classification → Text Replacement + Normalization)
- `_normalize_paragraph`: stale run 제거, linesegarray 리셋

### 4.3 P0 — AI 미커버 body 자동 비우기

**문제**: AI가 N개 섹션만 반환하면 템플릿의 나머지 섹션 body에 원본 샘플 문장(예: "시장 내 경쟁력을 강화...")이 그대로 남아 수십 회 반복 출력된다.

**해결** (`build_hwpx.py`):
```python
for i, sec in enumerate(sections):
    if i < len(toc):
        continue  # AI가 매핑한 섹션은 유지
    for body_p in sec['body_ps']:
        _normalize_paragraph(body_p, "")  # 나머지 body 단락 전부 비우기
```

**효과**: 미리보기와 다운로드 결과의 내용이 정확히 일치한다.

### 4.4 embed_diagrams (다이어그램 임베딩)

변경 없음 (기존과 동일):
- cairosvg 선택적 실행
- PNG 변환 후 `BinData/` 저장 + `content.hpf` manifest 등록 + `section0.xml` 삽입

### 4.5 fix_namespaces.py (HWPX 네임스페이스 후처리)

**역할**: `ElementTree`가 자동 부여한 `ns0:` / `ns1:` 프리픽스를 한컴 표준 `hh` / `hc` / `hp` / `hs` 로 교체하고, `header.xml`의 `itemCnt`를 실제 `binData` 개수와 동기화한다.

**사용**:
```bash
python3 v3/scripts/fix_namespaces.py output.hwpx
```

**호출 지점**: `build_hwpx.py`의 `pack_hwpx()` 직후 (낸부 import 또는 CLI).

### 4.6 clone_form.py (양식 복제 CLI)

**역할**: 원본 HWPX를 ZIP-level 문자열 치환만으로 복제하여 **표/이미지/병합셀 100% 보존**.

**주요 모드**:
| 모드 | 명령 | 설명 |
|------|------|------|
| 분석 | `python clone_form.py --analyze sample.hwpx` | 치환 가능 텍스트 추출 |
| 복제 | `python clone_form.py sample.hwpx output.hwpx --map map.json` | JSON 매핑 기반 치환 |
| 키워드 | `--map map.json --keywords kw.json` | 키워드 기반 자동 매핑 |
| CLI | `--replace "원본=대체"` | 인라인 치환 |

**사용 시점**: `build_hwpx.py`로 구조 기반 생성이 어려운 복잡 양식(표/이미지 다수)의 대안 빌더.

---

## 5. 공유 모듈 상세 설계

### 5.1 shared/validate.js

변경 없음 (기존과 동일):
- `validateDraftPayload(parsed)`: summary, sections, diagrams 검증
- `tryExtractJson(text)`: fenced code block + brace extraction

### 5.2 shared/docTypes.js

변경 없음 (기존과 동일):
- `buildToc(docType)`: 문서 유형별 기본 목차
- `deriveTitle(fileName, docType)`: 파일명 기반 제목 생성
- `labelForDocType(docType)`: 한국어 문서 유형명

---

## 6. 오류 처리 설계

| 계층 | 오류 상황 | 처리 방식 | 사용자 메시지 |
|------|-----------|-----------|---------------|
| Client (Uploader) | 확장자 불일치 | `setRejectMessage` + `role="alert"` | "지원하지 않는 파일 형식입니다: {filename}" |
| Client (Uploader) | 드래그 중 에러 | `isDragging=false` | - |
| Client (useRhwp) | WASM 로드 실패 | console.error + 상태 메시지 | "문서 파서를 로드할 수 없습니다." |
| Client (useDraft) | 파일 미업로드 | early return | "먼저 HWP 또는 HWPX 문서를 업로드해 주세요." |
| Client (useDraft) | AI 호출 401 | alert + 설정 패널 유도 | "API 키가 설정되지 않았습니다." |
| Server | AI 호출 timeout | 502 Bad Gateway | "AI 서버 연결에 실패했습니다." |
| Server | JSON 파싱 실패 | 502 + 재시도 | "AI 응답 형식이 올바르지 않습니다." |
| Server | Python 예외 | 500 + cleanup | "HWPX 생성에 실패했습니다." |
| Python | Template 없음 | SystemExit | "Template file not found" |
| Python | cairosvg 없음 | Warning log, skip | (무시, 다이어그램 없이 생성) |
